fix: adjust font size in staticText class for better readability

--- a/src/app/components/Bio.module.css
+++ b/src/app/components/Bio.module.css
@@ -4,7 +4,7 @@
 
 .staticText {
   line-height: 1.5;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   margin-bottom: 1rem;
 }
 
